--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <meta name="msapplication-tap-highlight" content="no" />
+<!--    <meta name="msapplication-tap-highlight" content="no" />-->
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
-    <title>PhoneGap revtest  App</title>
+    <title>pg revtest  App</title>
     <link rel="stylesheet" href="css/app.css" type="text/css"/>
-    <script src="js/ms-viewport.js"></script>
+<!--    <script src="js/ms-viewport.js"></script>-->
 </head>
 <body >
 	
@@ -53,7 +53,6 @@
 	
 	</div>
 
-    
 	
     <script src="cordova.js"></script>
 
